[gd_scene load_steps=2 format=3 uid="uid://i72rwlds4rgx"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_v0kj8"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v0kj8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute
"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Screen Mode" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 4
selected = 2
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Borderless Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Windowed"
popup/item_2/id = 2
popup/item_3/text = "Borderless Windowed"
popup/item_3/id = 3

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Screen Mode" to="." method="_on_screen_mode_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
